<resources>
    <string name="app_name">Movify_MiniProject</string>
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="checkbox">Remember Me</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="user">User</string>
    <string name="back">Back</string>
    <string name="user_ame">User Name</string>
    <string name="save_btn">Save btn</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="header">header</string>
</resources>