<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page1"
    tools:context=".Login">

    <EditText
        android:id="@+id/email"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#004D40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginBottom="320dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#004D40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="19dp"
        android:layout_height="29dp"
        android:layout_marginStart="68dp"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:contentDescription="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:srcCompat="@drawable/user" />

    <ImageButton
        android:id="@+id/login2_btn"
        android:layout_width="344dp"
        android:layout_height="72dp"
        android:layout_marginBottom="212dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:contentDescription="@string/login"
        android:scaleX="0.9"
        android:scaleY="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_btn" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="408dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>